--- a/style.css
+++ b/style.css
@@ -1,1 +1,1 @@
-html{background-color:#000;color:#fff}h1{font-family:'Roboto',sans-serif;text-align:center}h2{font-family:'Black Ops One',cursive;text-align:center}p,ul{font-family:'Roboto Slab',serif}a{color:#42a5f5;font-family:'Roboto'}
+html{background-color:#000;color:#fff}h1{font-family:'Roboto',sans-serif;text-align:center}h2{font-family:'Black Ops One',cursive;text-align:center}p,ul{font-family:'Roboto Slab',serif}a{color:#42a5f5;font-family:'Roboto';text-decoration:none;}
